--- a/JSscripts/index.html
+++ b/JSscripts/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <!-- <div class="bar bar1" style="">
+    <div class="bar bar1" style="">
         <span>%</span>
     </div>
     <div class="bar bar2" style="">
@@ -25,7 +25,7 @@
     <div class="square square-2" style=""></div>
     <div class="square square-3" style=""></div>
     <div class="square square-4" style=""></div>
-   </section> -->
+   </section>
     <script src="app.js"></script> 
 </body>
 </html>
