--- a/Pages/Project3/games.html
+++ b/Pages/Project3/games.html
@@ -21,13 +21,33 @@
         <img src="../images/jslogo.jpg" alt="" class="logos">
       </div>
      </header>
-     <main class="main"></main>
+     <main class="main">
+
+       <div class="main-wrapper">
+         <div class="el-1">
+             <span>Scissorss, rock, paper</span>
+             <a href="https://codepen.io/Gachette/pen/vYYQxrL" class="spr">Simple scissors, paper, rock game</a>
+         </div>
+         <div class="el-2"></div>
+         <div class="el-3"></div>
+         <div class="el-4"></div>
+         <div class="el-5"></div>
+         <div class="el-6"></div>
+         <div class="el-7"></div>
+         <div class="el-8"></div>
+         <div class="el-9"></div>
+         <div class="el-10"></div>
+         <div class="el-11"></div>
+         <div class="el-12"></div>
+       </div>
+
+     </main>
      <div class="sidebar">
       <div class="sidebar-menu">
         <a href="index.html" class="btn"><p>About</p></a>
         <a href="dossier.html" class="btn"><p>Dossier</p></a>
         <a href="" class="btn"><p>Projects</p></a>
-        <a href="games.html" class="btn"><p>Games</p></a>
+        <a href="" class="btn"><p>Games</p></a>
         <a href="" class="btn"><p>Contact</p></a>
       </div>
      </div>
