--- a/JSscripts/Games/First sprite game/index.html
+++ b/JSscripts/Games/First sprite game/index.html
@@ -11,6 +11,9 @@
 <body>
   <div class="board">
     <div class="hero"></div>
+    <div class="offset-down">Offset down: <span></span></div>
+    <div class="offset-left">Offset left: <span></span></div>
+    <div class="square"></div>
   </div>
   <script src="app.js"></script>
 </body>
