--- a/Pages/Project3/games.html
+++ b/Pages/Project3/games.html
@@ -26,7 +26,7 @@
        <div class="main-wrapper">
          <div class="el-1">
              <span>Scissorss, rock, paper</span>
-             <a href="https://codepen.io/Gachette/pen/vYYQxrL" class="spr">Simple scissors, paper, rock game</a>
+             <a href="https://codepen.io/Gachette/pen/vYYQxrL" class="spr">Simple scissors, paper, rock game<br>(Javascript)</a>
          </div>
          <div class="el-2"></div>
          <div class="el-3"></div>
