--- a/JSscripts/Apps/Ankieta/index.html
+++ b/JSscripts/Apps/Ankieta/index.html
@@ -10,6 +10,7 @@
   <div class="nowa-ankieta">
       <h1>Nowa ankieta</h1>
       <a href="" class="new__btn">Stwórz nową ankietę</a>
+      <img class="image" src="background2.png"/>
   </div>
 
 
